- Fixed overflow issues on smaller screens

--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -53,6 +53,7 @@
                 font-size: 0.8rem;
                 color: $gray-600;
                 margin-bottom: 5px;
+                overflow: hidden;
 
                 .entry-subtitle-left {
                     padding-right: 10px;
